# translate

./: .env.example  .gitignore  AGENTS.md  launcher.py  main.py  pyproject.toml
.openclaw/: workspace-state.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BatchView.tsx  ChatBubble.tsx  RealtimeView.tsx  SettingsView.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts  useWebSocket.ts
memory/: 2026-03-19.md
qwen-asr-translate/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ALL_FIXES_APPLIED.md  ARCHITECTURE.md  BATCHING_OPTIMIZATION.md  BUGFIX_AND_OPTIMIZATIONS.md  CHECKLIST.md  COLLAPSIBLE_SIDEBAR.md  DEVICE_DISPLAY_FIX.md  DEVICE_INDEX_BUG_FIX.md  DEVICE_INDEX_FIX.md  DOCKER_TODO.md  Dockerfile  Dockerfile.app  Dockerfile.cpu  Dockerfile.gpu  EXTREME_PERFORMANCE_OPTIMIZATION.md  FINAL_FIXES_COMPLETE.md  FINAL_FIX_COMPLETE.md  FINAL_OPTIMIZATIONS_VERIFIED.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDENTATION_FIX.md  INSTALL_GUIDE.html  OPENVINO_FIX.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_TIERS.md  PRODUCTION_OPTIMIZATIONS_COMPLETE.md  PROFESSIONAL_OPTIMIZATIONS.md  RACE_CONDITION_FIX.md  README.Docker.md  README.md  README_FIX.md  README_OPTIMIZATIONS.md  RECORD_BUTTON_DEBUG.md  STATE_DESYNC_BUG_FIX.md  SYSTEM_AUDIO_OVERVIEW.md  SYSTEM_AUDIO_QUICKSTART.md  (+31 more)
qwen-asr-translate/.github/workflows/: build.yml
qwen-asr-translate/docs/: AUDIO_DEVICES_GUIDE.md  ENTERPRISE_ARCHITECTURE.md  INIT_BEST_PRACTICES.md  INSTALL_GUIDE.md  ONE_CLICK_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  REFACTORING_ARCHITECTURE.md  REFACTORING_LOG.md  SYSTEM_AUDIO_GUIDE.md  UI_DESIGN.md  new_ui_preview.html
qwen-asr-translate/scripts/: AUTO-INSTALL.bat  EASY-INSTALL.bat  LAUNCH.bat  SETUP_WIZARD.bat  download-models.bat  install-and-run.bat  install.bat
qwen-asr-translate/src/: ai_controller.py  app.py  app_backup.py  asr_engine.py  audio_manager.py  controller.py  downloader.py  model_registry.py  ui.py  ui_performance_selector.py  vad_processor.py
qwen-asr-translate/src/qwen_asr/: __init__.py  app.py  main.py
qwen-asr-translate/src/qwen_asr/ai/: __init__.py  ai_controller.py  asr_engine.py
qwen-asr-translate/src/qwen_asr/audio/: __init__.py  audio_manager.py  vad_processor.py
qwen-asr-translate/src/qwen_asr/config/: __init__.py  settings.py
qwen-asr-translate/src/qwen_asr/core/: __init__.py
qwen-asr-translate/src/qwen_asr/domain/: __init__.py  controller.py
qwen-asr-translate/src/qwen_asr/ui/: __init__.py  ui.py
qwen-asr-translate/src/qwen_asr/utils/: __init__.py
qwen-asr-translate/src/qwen_asr_app/: __init__.py  api_gateway.py  app.py  main.py  worker.py
qwen-asr-translate/src/qwen_asr_app/ai/: __init__.py  ai_controller.py  asr_engine.py  worker_client.py
qwen-asr-translate/src/qwen_asr_app/audio/: __init__.py  audio_manager.py  vad_processor.py
qwen-asr-translate/src/qwen_asr_app/config/: __init__.py  settings.py
qwen-asr-translate/src/qwen_asr_app/core/: __init__.py  model_registry.py
qwen-asr-translate/src/qwen_asr_app/domain/: __init__.py  controller.py
qwen-asr-translate/src/qwen_asr_app/ui/: __init__.py  ui.py
qwen-asr-translate/src/qwen_asr_app/utils/: __init__.py
qwen-asr-translate/tools/: setup_checker.py  test_asr.py  test_devices.py
src/: __init__.py  app.py  backend.py
src/ai/: __init__.py  ai_controller.py  asr_engine.py  subtitle_generator.py  translation_engine.py
src/audio/: __init__.py  audio_manager.py  vad_processor.py  vad_simple.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  logging_config.py  model_registry.py
src/domain/: __init__.py  controller.py  events.py
src/ui/: __init__.py  batch_view.py  chat_bubble.py  components.py  floating_overlay.py  main_ui.py  realtime_view.py  settings_view.py  sidebar.py  theme.py  ui.py
src/utils/: __init__.py
