[project]
name = "qwen-asr-translate"
version = "0.2.0"
description = "Real-time ASR translation via LM Studio / Ollama API"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "requests>=2.31.0",
    "onnxruntime>=1.16.0",
    "silero-vad>=0.4.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "pyaudio>=0.2.13",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"