[project]
name = "qwen-asr-translate"
version = "0.2.0"
description = "Real-time ASR translation with local GPU inference"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "pyaudio>=0.2.13",
    "pyaudiowpatch>=0.2.12.6",
    "pycaw>=20220405",
    "comtypes>=1.1.10",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "qwen-asr",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pywebview>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]